@@ -1,7 +1,10 @@
 package com.example.SummerBuild.service;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.contains;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 import com.example.SummerBuild.dto.UserDto;
@@ -10,186 +13,147 @@ import com.example.SummerBuild.model.Gender;
 import com.example.SummerBuild.model.User;
 import com.example.SummerBuild.model.UserRole;
 import com.example.SummerBuild.repository.UserRepository;
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.*;
+import org.springframework.http.*;
+import org.springframework.test.util.ReflectionTestUtils;
+import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.client.RestTemplate;
 
-@ExtendWith(MockitoExtension.class)
 class UserServiceTest {
 
   @Mock private UserRepository userRepository;
-  private final UserMapper userMapper = new UserMapper();
-
+  @Mock private UserMapper userMapper;
   @InjectMocks private UserService userService;
 
-  private User user;
-  private UserDto userDto;
-  private UUID userId;
+  @Captor private ArgumentCaptor<UUID> uuidCaptor;
+
+  private final UUID userId = UUID.randomUUID();
+  private final User user =
+      User.builder().userUuid(userId).gender(Gender.MALE).role(UserRole.USER).build();
+
+  private final UserDto userDto = new UserDto();
 
   @BeforeEach
   void setUp() {
-    // Manually set the userMapper in the UserService
+    MockitoAnnotations.openMocks(this);
     userService = new UserService(userRepository, userMapper);
-
-    userId = UUID.randomUUID();
-    user = new User();
-    user.setId(userId);
-    user.setName("John Doe");
-    user.setEmail("john@example.com");
-    user.setRole(UserRole.USER);
-    user.setGender(Gender.MALE);
-    user.setCreatedAt(LocalDateTime.now());
-    user.setUpdatedAt(LocalDateTime.now());
-
-    userDto = new UserDto();
-    userDto.setId(userId);
-    userDto.setName("John Doe");
-    userDto.setEmail("john@example.com");
-    userDto.setRole(UserRole.USER);
-    userDto.setGender(Gender.MALE);
+    ReflectionTestUtils.setField(userService, "serviceKey", "dummyServiceKey");
+    ReflectionTestUtils.setField(userService, "supabaseUrl", "http://dummy.supabase.io");
   }
 
   @Test
-  void findAllReturnsAllUsers() {
-    when(userRepository.findAll()).thenReturn(Arrays.asList(user));
+  void findAll_returnsMappedUsers() {
+    when(userRepository.findAll()).thenReturn(List.of(user));
+    when(userMapper.toDto(user)).thenReturn(userDto);
 
     List<UserDto> result = userService.findAll();
 
-    assertNotNull(result);
-    assertEquals(1, result.size());
-    assertEquals(userDto.getName(), result.get(0).getName());
+    assertThat(result).containsExactly(userDto);
   }
 
   @Test
-  void findByIdReturnsUser() {
+  void findById_found_returnsDto() {
     when(userRepository.findById(userId)).thenReturn(Optional.of(user));
+    when(userMapper.toDto(user)).thenReturn(userDto);
 
     UserDto result = userService.findById(userId);
 
-    assertNotNull(result);
-    assertEquals(userDto.getName(), result.getName());
-    assertEquals(userDto.getEmail(), result.getEmail());
+    assertThat(result).isEqualTo(userDto);
   }
 
   @Test
-  void findByIdThrowsWhenNotFound() {
+  void findById_notFound_throwsException() {
     when(userRepository.findById(userId)).thenReturn(Optional.empty());
 
-    assertThrows(UserService.ResourceNotFoundException.class, () -> userService.findById(userId));
+    assertThatThrownBy(() -> userService.findById(userId))
+        .isInstanceOf(UserService.ResourceNotFoundException.class)
+        .hasMessageContaining("User not found");
   }
 
   @Test
-  void findByEmailReturnsUser() {
-    when(userRepository.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
-
-    UserDto result = userService.findByEmail(user.getEmail());
-
-    assertNotNull(result);
-    assertEquals(userDto.getName(), result.getName());
-    assertEquals(userDto.getEmail(), result.getEmail());
-  }
-
-  @Test
-  void findByEmailThrowsWhenNotFound() {
-    when(userRepository.findByEmail(user.getEmail())).thenReturn(Optional.empty());
-
-    assertThrows(
-        UserService.ResourceNotFoundException.class,
-        () -> userService.findByEmail(user.getEmail()));
-  }
-
-  @Test
-  void createReturnsNewUser() {
-    when(userRepository.existsByEmail(userDto.getEmail())).thenReturn(false);
-    when(userRepository.findByName(userDto.getName())).thenReturn(Optional.empty());
-    when(userRepository.save(any(User.class))).thenReturn(user);
-
-    UserDto result = userService.create(userDto);
-
-    assertNotNull(result);
-    assertEquals(userDto.getName(), result.getName());
-    assertEquals(userDto.getEmail(), result.getEmail());
-  }
-
-  @Test
-  void createThrowsWhenEmailExists() {
-    when(userRepository.existsByEmail(userDto.getEmail())).thenReturn(true);
-
-    assertThrows(UserService.DuplicateResourceException.class, () -> userService.create(userDto));
-  }
-
-  @Test
-  void updateReturnsUpdatedUser() {
-    when(userRepository.findById(userId)).thenReturn(Optional.of(user));
-    when(userRepository.save(any(User.class))).thenReturn(user);
-
-    UserDto result = userService.update(userId, userDto);
-
-    assertNotNull(result);
-    assertEquals(userDto.getName(), result.getName());
-    assertEquals(userDto.getEmail(), result.getEmail());
-  }
-
-  @Test
-  void updateThrowsWhenNotFound() {
-    when(userRepository.findById(userId)).thenReturn(Optional.empty());
-
-    assertThrows(
-        UserService.ResourceNotFoundException.class, () -> userService.update(userId, userDto));
-  }
-
-  @Test
-  void deleteRemovesUser() {
+  void delete_found_callsDelete() {
     when(userRepository.existsById(userId)).thenReturn(true);
-    doNothing().when(userRepository).deleteById(userId);
 
-    assertDoesNotThrow(() -> userService.delete(userId));
+    userService.delete(userId);
+
     verify(userRepository).deleteById(userId);
   }
 
   @Test
-  void deleteThrowsWhenNotFound() {
+  void delete_notFound_throwsException() {
     when(userRepository.existsById(userId)).thenReturn(false);
 
-    assertThrows(UserService.ResourceNotFoundException.class, () -> userService.delete(userId));
+    assertThatThrownBy(() -> userService.delete(userId))
+        .isInstanceOf(UserService.ResourceNotFoundException.class);
   }
 
   @Test
-  void findByNameReturnsMatchingUsers() {
-    when(userRepository.findByNameContainingIgnoreCase("John")).thenReturn(Arrays.asList(user));
-
-    List<UserDto> result = userService.findByNameContaining("John");
-
-    assertNotNull(result);
-    assertEquals(1, result.size());
-    assertEquals(userDto.getName(), result.get(0).getName());
-  }
-
-  @Test
-  void findByRoleReturnsUsers() {
-    when(userRepository.findByRole(UserRole.USER)).thenReturn(Arrays.asList(user));
+  void findByRole_returnsMappedUsers() {
+    when(userRepository.findByRole(UserRole.USER)).thenReturn(List.of(user));
+    when(userMapper.toDto(user)).thenReturn(userDto);
 
     List<UserDto> result = userService.findByRole(UserRole.USER);
 
-    assertNotNull(result);
-    assertEquals(1, result.size());
-    assertEquals(userDto.getName(), result.get(0).getName());
+    assertThat(result).containsExactly(userDto);
   }
 
   @Test
-  void countByRoleReturnsCount() {
-    when(userRepository.countByRole(UserRole.USER)).thenReturn(1L);
+  void getAllUsers_returnsResponseEntity() {
+    RestTemplate restTemplateMock = mock(RestTemplate.class);
+    ReflectionTestUtils.setField(userService, "restTemplate", restTemplateMock);
 
-    Long result = userService.countByRole(UserRole.USER);
+    String response = "{\"message\": \"ok\"}";
+    when(restTemplateMock.exchange(
+            anyString(), eq(HttpMethod.GET), any(HttpEntity.class), eq(String.class)))
+        .thenReturn(new ResponseEntity<>(response, HttpStatus.OK));
 
-    assertEquals(1L, result);
+    ResponseEntity<String> result = userService.getAllUsers();
+
+    assertThat(result.getBody()).isEqualTo(response);
+    assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
+  }
+
+  @Test
+  void getUserById_returnsResponseEntity() {
+    RestTemplate restTemplateMock = mock(RestTemplate.class);
+    ReflectionTestUtils.setField(userService, "restTemplate", restTemplateMock);
+
+    when(restTemplateMock.exchange(
+            contains(userId.toString()),
+            eq(HttpMethod.GET),
+            any(HttpEntity.class),
+            eq(String.class)))
+        .thenReturn(ResponseEntity.ok("{\"email\":\"test@example.com\"}"));
+
+    ResponseEntity<String> result = userService.getUserById(userId);
+    assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
+  }
+
+  @Test
+  void deleteUserById_handlesHttpErrors() {
+    RestTemplate restTemplateMock = mock(RestTemplate.class);
+    ReflectionTestUtils.setField(userService, "restTemplate", restTemplateMock);
+
+    String errorJson =
+        "{\"code\":404,\"error_code\":\"user_not_found\",\"msg\":\"User not found\"}";
+
+    HttpClientErrorException exception =
+        HttpClientErrorException.create(
+            HttpStatus.NOT_FOUND, "Not Found", HttpHeaders.EMPTY, errorJson.getBytes(), null);
+
+    when(restTemplateMock.exchange(
+            contains(userId.toString()),
+            eq(HttpMethod.DELETE),
+            any(HttpEntity.class),
+            eq(String.class)))
+        .thenThrow(exception);
+
+    ResponseEntity<String> result = userService.deleteUserById(userId);
+
+    assertThat(result.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
+    assertThat(result.getBody()).contains("\"msg\":\"User not found\"");
   }
 }
